--- a/ListaDeUsuarios.html
+++ b/ListaDeUsuarios.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista De Usuarios</title>
+    <link rel="stylesheet" href="ListaDeUsuarios.css">
 </head>
 <body>
-    <a href = "Cadastro.html"> Cadastrar um usuario </a>
+   <div class="button_center"> <button id="botão"> Cadastrar um Usuario  </button> </div>
     <h1> Lista de Usuarios Cadastrados </h1>
     <ul id="userlist"></ul>
 
@@ -19,7 +20,7 @@
             for (let i = 0; i < dados.length; i++) {
                 const objeto = dados[i];
                 const listadosusuarioscriados = document.createElement('li')
-                listadosusuarioscriados.innerText = `${objeto.id} ${objeto.nome}`
+                listadosusuarioscriados.innerText = `[ID: ${objeto.id}] [Usuario: ${objeto.nome}] [Idade: ${objeto.idade} anos]`
                 lista.appendChild(listadosusuarioscriados)
             }
         } else {
@@ -32,6 +33,11 @@
         }
      }   
      buscadedados()
+
+      const botao = document.getElementById('botão')
+        botao.addEventListener('click', function() {
+            window.location.href = 'Cadastro.html';
+        });
     </script>
 </body>
 </html>
