--- a/CadastroHóspedes/CadastroHóspedes.html
+++ b/CadastroHóspedes/CadastroHóspedes.html
@@ -10,6 +10,21 @@
 </head>
 
 <body>
+    <header class="top">
+        <nav class="navbar">
+          <div class="navbar-brand">
+            <p class="logo">HOTELHOST</p>
+          </div>
+    
+          <input type="checkbox" id="menuToggle">
+          <label for="menuToggle" class="navbar-toggle">&#9776;</label>
+    
+          <ul class="navbar-menu">
+            <li><a href="/Homepage/Homepage.html">Início</a></li>
+          </ul>
+        </nav>
+      </header>
+
     <form onsubmit="event.preventDefault(); formulario()">
         <input type="text" id="cpf" name="cpf" placeholder="CPF (000.000.000-00)" maxlength="14" required oninput="mascararCPF(this)"><br><br>
         <input type="text" id="nome" name="nome" placeholder="Nome" required><br><br>
