commit para salvar 4.

--- a/CadastroHóspedes/CadastroHóspedes.html
+++ b/CadastroHóspedes/CadastroHóspedes.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastrar Usuarios</title>
     <link rel="stylesheet" href="/CadastroHóspedes/CadastroHóspedes.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 
@@ -13,7 +14,7 @@
     <header class="top">
         <nav class="navbar">
           <div class="navbar-brand">
-            <p class="logo">HOTELHOST</p>
+            <p class="logo">Palm Resort</p>
           </div>
     
           <input type="checkbox" id="menuToggle">
