--- a/CadastroHóspedes/CadastroHóspedes.html
+++ b/CadastroHóspedes/CadastroHóspedes.html
@@ -1,53 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cadastrar Usuários</title>
+    <link rel="stylesheet" href="/CadastroHóspedes/CadastroHóspedes.css" />
+   
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastrar Usuarios</title>
-    <link rel="stylesheet" href="/CadastroHóspedes/CadastroHóspedes.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-
-</head>
-
-<body>
+  <body>
     <header class="top">
-        <nav class="navbar">
-          <div class="navbar-brand">
-            <p class="logo">Palm Resort</p>
-          </div>
-    
-          <input type="checkbox" id="menuToggle">
-          <label for="menuToggle" class="navbar-toggle">&#9776;</label>
-    
-          <ul class="navbar-menu">
-            <li><a href="/Homepage/Homepage.html">Início</a></li>
-          </ul>
-        </nav>
-      </header>
+      <nav class="navbar">
+        <div class="navbar-brand">
+          <p class="logo">PALM RESORT<sup>&reg;</sup></p>
+        </div>
+
+        <input type="checkbox" id="menuToggle" />
+        <label for="menuToggle" class="navbar-toggle">&#9776;</label>
+
+        <ul class="navbar-menu">
+          <li><a href="/Homepage/Homepage.html">Início</a></li>
+        </ul>
+      </nav>
+    </header>
 
     <form onsubmit="event.preventDefault(); formulario()">
-        <input type="text" id="cpf" name="cpf" placeholder="CPF (000.000.000-00)" maxlength="14" required oninput="mascararCPF(this)"><br><br>
-        <input type="text" id="nome" name="nome" placeholder="Nome" required><br><br>
-        <input type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome" required><br><br>
-        <input type="number" id="idade" name="idade" placeholder="Idade" required><br><br>
-        <input type="text" id="telefone" name="telefone" placeholder="(99) 99999-9999" maxlength="15" required oninput="mascararTelefone(this)"><br><br>
-        <input type="email" id="email" name="email" placeholder="Email"><br><br>
+      <input
+        type="text"
+        id="cpf"
+        name="cpf"
+        placeholder="CPF (000.000.000-00)"
+        maxlength="14"
+        required
+        oninput="mascararCPF(this)"
+      /><br /><br />
+      <input
+        type="text"
+        id="nome"
+        name="nome"
+        placeholder="Nome"
+        required
+      /><br /><br />
+      <input
+        type="text"
+        id="sobrenome"
+        name="sobrenome"
+        placeholder="Sobrenome"
+        required
+      /><br /><br />
+      <input
+        type="number"
+        id="idade"
+        name="idade"
+        placeholder="Idade"
+        required
+      /><br /><br />
+      <input
+        type="text"
+        id="telefone"
+        name="telefone"
+        placeholder="(99) 99999-9999"
+        maxlength="15"
+        required
+        oninput="mascararTelefone(this)"
+      /><br /><br />
+      <input
+        type="email"
+        id="email"
+        name="email"
+        placeholder="Email"
+      /><br /><br />
 
-        <label for="sexo">Sexo:</label>
-        <select name="sexo" id="sexo" required>
-            <option value="Masculino">Masculino</option>
-            <option value="Feminino">Feminino</option>
-            <option value="Outro" selected>Outro</option>
-        </select><br><br>
+      <select name="sexo" id="sexo" required>
+        <option value="" disabled selected>Selecione o seu gênero</option>
+        <option value="Masculino">Masculino</option>
+        <option value="Feminino">Feminino</option>
+        <option value="Outro">Outro</option>
+      </select>
+      <br /><br />
 
-        <input type="submit" id="cadastrar" value="Cadastrar">
-        <input type="reset" id="reset" value="Limpar">
+      <input type="submit" id="cadastrar" value="Cadastrar" />
+      <input type="reset" id="reset" value="Limpar" />
     </form>
 
     <script src="/CadastroHóspedes/CadastroHóspedes.js"></script>
-</body>
-
-
-
+  </body>
 </html>
