--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -7,15 +7,14 @@
   <title>Home</title>
   <link class="iconf" rel="icon" type="image/Union.svg" href="/images/Union.svg">
   <link rel="stylesheet" href="/Homepage/Homepage.css"/>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=list,directions_car,hotel" />" />
+
 </head>
 <body>
    <header class="top">
     <nav class="navbar">
       <div class="navbar-brand">
-        <p class="logo">HOTELHOST</p>
+        <p class="logo">PALM RESORT<sup>&reg;</sup></p>
       </div>
-      <input type="checkbox" id="menuToggle">
       <label for="menuToggle" class="navbar-toggle"></label>
       <ul class="navbar-menu">
         <li><a href="/Homepage/Homepage.html">Início</a></li>
@@ -23,6 +22,7 @@
     </nav>
   </header>
 
+<div class="butao">
   <main class="menu-container">
     <div class="menu-item">
       <a href="/CadastroHóspedes/CadastroHóspedes.html">
@@ -49,17 +49,33 @@
       </a>
     </div>
     <div class="menu-item">
-      <a href="/ListaVeiculos/ListaDeVeiculos.html">
+      <a href="/CadastroQuartos/CadastroQuarto.html">
         <span class="icon material-symbols-outlined">hotel</span>
         <span>Quartos</span>
       </a>
     </div>
     <div class="menu-item">
-      <a href="/ListaVeiculos/ListaDeVeiculos.html">
+      <a href="/ListagemQuartos/ListagemQuartos.html">
         <span class="icon material-symbols-outlined">list</span>
         <span>Listagem de Quartos</span>
       </a>
     </div>
   </main>
+  </div>  
+  <div class="sobre">
+
+<div class="block"> aaaaaaaaaaaaaa</div>
+
+
+
+  </div> 
+
+   
+  
+  
+    <div id="footer"> 
+    <p>&copy; 2025 Palm Resort. Todos os direitos reservados.</p>
+    </div>
+
 </body>
 </html>
