[Lucas] Alteração de css e Criação de uma pagina sobre.

--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -3,27 +3,35 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="icon" href="Union.svg" type="image/x-icon">
+  <link rel="icon" href="/images/Union.svg" type="image/x-icon">
   <title>Home</title>
-  <link class="iconf" rel="icon" type="image/Union.svg" href="/images/Union.svg">
-  <link rel="stylesheet" href="/Homepage/Homepage.css"/>
 
+  <!-- Fontes necessárias -->
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&display=block" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;600&display=swap" rel="stylesheet">
+
+  <!-- Estilo -->
+  <link rel="stylesheet" href="/Homepage/Homepage.css"/>
 </head>
 <body>
-   <header class="top">
+  <header class="top">
     <nav class="navbar">
       <div class="navbar-brand">
         <p class="logo">PALM RESORT<sup>&reg;</sup></p>
       </div>
-      <label for="menuToggle" class="navbar-toggle"></label>
       <ul class="navbar-menu">
         <li><a href="/Homepage/Homepage.html">Início</a></li>
       </ul>
     </nav>
   </header>
 
-<div class="butao">
   <main class="menu-container">
+    <div class="menu-item">
+      <a href="/PalmResort/PalmResort.html">
+        <span class="icon material-symbols-outlined">info</span>
+        <span>Sobre</span>
+      </a>
+    </div>
     <div class="menu-item">
       <a href="/CadastroHóspedes/CadastroHóspedes.html">
         <span class="icon material-symbols-outlined">account_box</span>
@@ -61,21 +69,5 @@
       </a>
     </div>
   </main>
-  </div>  
-  <div class="sobre">
-
-<div class="block"> aaaaaaaaaaaaaa</div>
-
-
-
-  </div> 
-
-   
-  
-  
-    <div id="footer"> 
-    <p>&copy; 2025 Palm Resort. Todos os direitos reservados.</p>
-    </div>
-
 </body>
 </html>
